# Human-detection-RGBD

Human-detection-RGBD.xcodeproj/: project.pbxproj
Human-detection-RGBD.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Human-detection-RGBD.xcodeproj/project.xcworkspace/xcuserdata/sumomoshinqi.xcuserdatad/: UserInterfaceState.xcuserstate
Human-detection-RGBD.xcodeproj/xcuserdata/sumomoshinqi.xcuserdatad/xcschemes/: Graduation thesis.xcscheme  xcschememanagement.plist
source/: CMakeLists.txt  COpenNi.cpp  COpenNi.h  CalDepthDifNormalVec.cpp  CalDepthDifNormalVec.h  Data3DHelper.h  GetRect.cpp  GetRect.h  HeadDetect.cpp  HeadDetect.h  HeadFiles.h  HeadFinder.cpp  HeadFinder.h  MatHelper.h  PreProcess.cpp  PreProcess.h  main.cpp  train.txt
source/47_label/: Ign_47_34800-35800.txt  Ign_47_50800-52200.txt  Korean_47_34800-35800_train_data.txt  Korean_47_34800-35800_train_data_depdif.txt  Korean_47_34800-35800_train_data_normal.txt  Korean_47_50800-52200_train_data.txt  Korean_47_50800-52200_train_data_depdif.txt  Korean_47_50800-52200_train_data_normal.txt  Pos_47_34800-35800.txt  Pos_47_50800-52200.txt  cloth 47 ignore.xlsx  cloth 47 positive.xlsx
